New layout for index, fix some broken links.

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,4 +1,4 @@
 {% extends "layout.html" %}
 {% block content %}
-	<h1>INDEX PLACEHOLDER</h1>
+	<h1>DON'T CALL US, WE'LL CALL YOU</h1>
 {% endblock %}
