Flesh out the password module.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
             <div class="col-xs-6 col-lg-4">
               <h2>Password Strength & Cracking</h2>
               <p>Crack passwords like a real-life attacker and learn more about password strength and the dangers of default passwords. [Under Construction]</p>
-              <p><a class="btn btn-default" href="#" role="button">Begin Module&raquo;</a></p>
+              <p><a class="btn btn-default" href="{{ url_for('passwordModule') }}" role="button">Begin Module&raquo;</a></p>
             </div><!--/.col-xs-6.col-lg-4-->
             <div class="col-xs-6 col-lg-4">
               <h2>Web Security</h2>
