Update layout to include link to code repository and update about page.

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -53,7 +53,8 @@
         <hr>
         {% block content %}{% endblock %}
       </div>
-
+    <hr>
+    <p>Code repository is hosted <a href="https://github.com/ClamSec/CSAM">here</a>.</p>
     </div><!-- /.container -->
 
 
