--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,4 +1,12 @@
 {% extends "layout.html" %}
 {% block content %}
-	<h1>ABOUT PLACEHOLDER</h1>
+	<h1>About the Cyber Security Awareness Module</h1>
+	<p>
+  The Cyber Security Awareness Module (CSAM) is an educational project
+  brought to you by students of Columbus State University.
+  </p>
+  <p>
+  The aim of CSAM is to provide a practical module to teach average college
+  students a little bit about computer/information/cyber/buzzword security.
+  </p>
 {% endblock %}
