--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -15,6 +15,13 @@
     <!-- Bootstrap core CSS -->
     <link href="../static/bootstrap-3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Inline CSS -->
+    <style>
+      .navbar {
+          background-color: #003359;
+      }
+    </style>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -33,11 +40,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{ url_for('index') }}">Cyber Security Awareness Module</a>
+  <a class="navbar-brand" href="{{ url_for('index') }}"><b>Cyber Security Awareness Module</b></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{{ url_for('index') }}">Home</a></li>
+            <li class="active"><a href="{{ url_for('index') }}"><b>MODULES</b></a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
             <li><a href="{{ url_for('contact') }}">Contact</a></li>
           </ul>
@@ -53,8 +60,11 @@
         <hr>
         {% block content %}{% endblock %}
       </div>
+
     <hr>
-    <p>Code repository is hosted <a href="https://github.com/ClamSec/CSAM">here</a>.</p>
+      <footer>
+        <p>Source code hosted at <a href="https://github.com/ClamSec/CSAM">here</a>.</p>
+      </footer>
     </div><!-- /.container -->
 
 
