--- a/app/templates/password-cracking.html
+++ b/app/templates/password-cracking.html
@@ -1,4 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
 	<h1>PASSWORD CRACKING PLACEHOLDER</h1>
+        <form action="." method="POST">
+              <input type="text" name="password"/>
+              <button>Crack Password</button>
+        </form>
 {% endblock %}
