Update contact info.

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,4 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
-	<h1>DON'T CALL US, WE'LL CALL YOU</h1>
+	<h1>Contact Information</h1>
+	<p>In email addresses, replace brackets and their text with logical replacements.</p>
+	<p>Got to fight them bots somehow.</p>
+	<br><br>
+	<p><b>Christopher Lamberson</b></p>
+	<p>Email: lamberson[underscore]christopher[at]columbusstate[dot]edu
+	<p>Github: https://github.com/ClamSec</p>
+	<br>
+	<p><b>Nathaniel Gibson</b></p>
+	<p>Email: gibson[underscore]nathaniel1[at]columbusstate[dot]edu
+	<p>Github: https://github.com/gibsonnathan<p>
 {% endblock %}
