added validation, and tables for results

--- a/app/templates/password-strength.html
+++ b/app/templates/password-strength.html
@@ -1,18 +1,18 @@
 {% extends "layout.html" %}
 {% block content %}
-        <div class="container">
-            <h3>Password Complexity Checker</h3>
-            <p style="margin: 10px 10px 10px 0px;">
+        <div style="margin: 30px 0px 0px 0px;" class="container">
+            <h3 style="margin: 0px 0px 30px 0px;">Password Complexity Checker</h3>
+            <p style="margin: 15px 0px 0px 0px;">
                 The best way that users can protect their passwords from cracking is to ensure they choose strong passwords. Typically, passwords must contain a combination of mixed-case random letters, digits and symbols. Strong passwords should never be actual words. In addition, strong passwords are at least eight characters long. 
             </p>
-            <p style="margin: 10px 10px 10px 0px;">
+            <p style="margin: 15px 0px 30px 0px;">
                 A general formula for calculating the complexity of a password is # of possible unique characters ^ how many characters in the password. For example if your password consist of only eight lowercase letters you have 26 ^ 8 or 208827064576 possibilities. Including numbers as well as lowercase letters in your eight character password increases its complexity to 36 ^ 8 or 2821109907456 possibilities. 
             </p>
-            <h5>Try passwords and see if they meet recommended requirements for complexity</h5>
-            <form action="." method="POST" class="col-md-4" style="margin: 0px 10px 10px 10px;">
+            <h5>Try passwords and see if they meet recommended requirements for complexity.</h5>
+            <form action="." method="POST" class="col-md-4" style="margin: 15px 0px 0px 0px;">
                 <div class="row">
-                  <input type="password" class="col-md-6" name="password" style="margin: 13px 10px 0px 0px;" />
-                  <button class="btn" style="margin: 10px 10px 0px 0px;">Check Password</button>
+                  <input type="password" class="col-md-6 form-control" required="required" name="password" style="margin: 0px 10px 0px 0px;" placeholder="Enter a password"  />
+                  <button class="btn" style="margin: 20px 10px 0px 0px;">Check Password</button>
                 </div>
             </form>
         </div>
