--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -11,6 +11,22 @@
     {% else %}
       <title>Cyber Security Awareness Module</title>
     {% endif %}
+    
+    <!--
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#submit").click(function () {
+                var password = document.getElementById('password').value;
+
+                if (password.length == 1) {
+                    alert("Please enter a password > 1 characters");
+                    return false;
+                }
+            });
+        });  
+    </script>
+    -->
 
     <!-- Bootstrap core CSS -->
     <link href="../static/bootstrap-3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
