--- a/app/templates/password-module.html
+++ b/app/templates/password-module.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-	<h1>PASSWORD SECURITY</h1>
-  <li><a href="{{ url_for('passwordCracking') }}">Password Cracking</a></li>
-  <li><a href="{{ url_for('passwordStrength') }}">Password Strength</a></li>
+	<h3 style="margin: 30px 0px 0px 0px;">Password Security</h3>
+    <li style="margin: 30px 0px 0px 0px;"><a href="{{ url_for('passwordStrength') }}">Password Strength</a></li>
+    <li ><a href="{{ url_for('passwordCracking') }}">Password Cracking</a></li>
 {% endblock %}
