--- a/app/templates/password_cracking_results.html
+++ b/app/templates/password_cracking_results.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
-        <h4>{{results}}</h4>
+        <h3 style="margin: 30px 0px 0px 0px;">Results</h3>
+        <p style="margin: 30px 0px 0px 0px;">{{results}}</p>
 {% endblock %}
