--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -11,22 +11,6 @@
     {% else %}
       <title>Cyber Security Awareness Module</title>
     {% endif %}
-    
-    <!--
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $("#submit").click(function () {
-                var password = document.getElementById('password').value;
-
-                if (password.length == 1) {
-                    alert("Please enter a password > 1 characters");
-                    return false;
-                }
-            });
-        });  
-    </script>
-    -->
 
     <!-- Bootstrap core CSS -->
     <link href="../static/bootstrap-3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -61,7 +45,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{{ url_for('index') }}"><b>MODULES</b></a></li>
+            <li class="active"><a href="{{ url_for('index') }}"><b>Modules</b></a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
             <li><a href="{{ url_for('contact') }}">Contact</a></li>
           </ul>
@@ -71,10 +55,10 @@
 
     <div class="container">
 
-      <div class="starter-template">
+      <div style="margin: 30px 0px 0px 0px;" class="starter-template">
 	<br><br><!--/Don't let your page be blocked by the navbar. -->
-        <h1>Cyber Security Awareness Module</h1>
-        <hr>
+        
+        
         {% block content %}{% endblock %}
       </div>
 
