--- a/app/templates/password-module.html
+++ b/app/templates/password-module.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
 	<h3 style="margin: 30px 0px 0px 0px;">Password Security</h3>
-    <li style="margin: 30px 0px 0px 0px;"><a href="{{ url_for('passwordStrength') }}">Password Strength</a></li>
-    <li ><a href="{{ url_for('passwordCracking') }}">Password Cracking</a></li>
+    <ul style="margin: 30px 0px 0px 0px;" class="list-group">
+    <li class="list-group-item"><a href="{{ url_for('passwordStrength') }}">Password Strength</a></li>
+    <li class="list-group-item"><a href="{{ url_for('passwordCracking') }}">Password Cracking</a></li> 
+    </ul>
 {% endblock %}
