--- a/app/templates/password_strength_results.html
+++ b/app/templates/password_strength_results.html
@@ -1,14 +1,23 @@
 {% extends "layout.html" %}
 {% block content %}
-        <h3 style="margin: 30px 0px 0px 0px;">Results</h3>
-        <table style="margin: 30px 0px 0px 0px;" class="table table-striped table-bordered table-condensed">
-            {% for key, value in results.iteritems() %}
-               <tr>
-                    <th> {{ key }} </th>
-                    <td> {{ value }} </td>
-               </tr>
-            {% endfor %}
-        </table>
-        <h3 style="margin: 30px 0px 0px 0px;">Time to Crack Your Password</h3>
-        <p>{{time}}</p>
+    <h3 style="margin: 30px 0px 0px 0px;">Results</h3>
+    <table style="margin: 30px 0px 0px 0px;" class="table table-striped table-bordered table-condensed">
+        {% for key, value in results.iteritems() %}
+           <tr>
+                <th> {{ key }} </th>
+                <td> {{ value }} </td>
+           </tr>
+        {% endfor %}
+    </table>
+    <h3 style="margin: 30px 0px 0px 0px;">Time Needed to Brute Force Your Password</h3>
+    <table style="margin: 30px 0px 0px 0px;" class="table table-striped table-bordered table-condensed">
+        {% for key, value in time.iteritems() %}
+           <tr>
+                <th> {{ key }} </th>
+                <td> {{ value }} </td>
+           </tr>
+        {% endfor %}
+    </table>
+    </br>
+    <p>Estimations for rates are from <a href="http://hashcat.net/oclhashcat/#performance">here</a></p>
 {% endblock %}
