added se and default passwords

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,7 @@
         <div class="col-md-4">
           <h2>Social Engineering and You</h2>
           <p>Click the button below. Come on, you can trust me. [Under Construction]</p>
-          <p><a class="btn btn-default" href="#" role="button">Begin Module &raquo;</a></p>
+          <p><a class="btn btn-default" href="{{ url_for('socialEngineeringModule') }}" role="button">Begin Module &raquo;</a></p>
         </div>
       </div>
     <!-- Row 2 -->
