--- a/app/templates/password-module.html
+++ b/app/templates/password-module.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
-	<h3 style="margin: 30px 0px 0px 0px;">Password Security</h3>
-    <ul style="margin: 30px 0px 0px 0px;" class="list-group">
-    <li class="list-group-item"><a href="{{ url_for('passwordStrength') }}">Password Strength</a></li>
-    <li class="list-group-item"><a href="{{ url_for('passwordCracking') }}">Password Cracking</a></li> 
-    </ul>
+<h3 style="margin: 15px 0px 0px 0px;">Password Security</h3>
+<hr>
+<ul style="margin: 15px 0px 0px 0px;" class="list-group">
+    <li class="list-group-item"><a href="{{ url_for('passwordStrength') }}">1. Password Strength</a></li>
+    <li class="list-group-item"><a href="{{ url_for('passwordCracking') }}">2. Password Cracking</a></li>
+    <li class="list-group-item"><a href="{{ url_for('defaultPasswords') }}">3. Default Passwords</a></li>
+</ul>
 {% endblock %}
