updated password module

--- a/app/templates/password-cracking.html
+++ b/app/templates/password-cracking.html
@@ -25,7 +25,7 @@
         </div>
         <div class="row">
           <input style="margin: 15px 0px 0px 0px;" pattern="^([a-z]{1,5})$" required="required" title="Please enter a lowercase password with less than 6 characters" type="password" class="col-md-6 form-control" name="password"  placeholder="Enter a password" />
-          <button style="margin: 15px 0px 0px 0px;" id="submit" class="btn">Crack Password</button>
+          <button style="margin: 15px 0px 0px 0px;" id="submit" class="btn btn-default">Crack Password</button>
         </div>
     </form>
        
