--- a/app/templates/password-strength.html
+++ b/app/templates/password-strength.html
@@ -14,7 +14,7 @@
     <form action="." method="POST" class="col-md-4" style="margin: 15px 0px 0px 0px;">
         <div class="row">
             <input type="password" class="col-md-6 form-control" required="required" name="password" style="margin: 0px 10px 0px 0px;" placeholder="Enter a password"  />
-            <button class="btn" style="margin: 20px 10px 0px 0px;">Check Password</button>
+            <button class="btn btn-default" style="margin: 20px 10px 0px 0px;">Check Password</button>
         </div>
     </form>
 </div>
