--- a/app/templates/password_strength_results.html
+++ b/app/templates/password_strength_results.html
@@ -20,6 +20,12 @@
        </tr>
     {% endfor %}
 </table>
+<div style="float:left; margin-top: 30px">
+<a href="{{ url_for('passwordStrength') }}"><button class="btn btn-info"style="margin: 0px 0px 0px 995px;">Go back</button></a>
+</div>
+<div style="float:right; margin-top: 30px">
+<a href="{{ url_for('passwordCracking') }}"><button class="btn btn-info">Next</button></a>
+</div>
 </br>
-<p>Estimations for rates are from <a href="http://hashcat.net/oclhashcat/#performance">here.</a></p>
+<!-- <p>Estimations for rates are from <a href="http://hashcat.net/oclhashcat/#performance">here.</a></p> -->
 {% endblock %}
