--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,7 @@
         <div class="col-md-4">
           <h2>Password Strength & Cracking</h2>
           <p>Crack passwords like a real-life attacker and learn more about password strength and the dangers of default passwords. [Under Construction]</p>
-          <p><a class="btn btn-default" href="{{ url_for('passwordModule') }}" role="button">Begin Module&raquo;</a></p>
+          <p><a class="btn btn-default" href="{{ url_for('passwordStrength') }}" role="button">Begin Module&raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Web Security</h2>
