added certificate thing

--- a/app/templates/password-completion.html
+++ b/app/templates/password-completion.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="container" style="position: relative;">
-    <img src="../static/jsPDF-1.2.60/certificate.jpg" height="720" width="960">
+    <img src="../static/images/certificate.jpg" height="720" width="960">
     <div id="name" style="position: absolute;top: 290px;left: 205px;width: 100%;">
     </div>
     <div id="for" style="position: absolute;top: 390px;left: 205px;width: 100%;">
