--- a/app/templates/detectingphishing.html
+++ b/app/templates/detectingphishing.html
@@ -6,8 +6,18 @@
     <h3>Detecting Phishing</h3>
     <hr>
 
-    <p style="margin: 15px 0px 0px 0px;">
-       
+    <p>
+Phishing emails will often take you to fake websites that are mocked up to look like legitimate websites.
+    For example, compare:
+    <br>
+    <a href={{ url_for('fakeLogin') }}>CougarNet Login</a>
+    <br>
+    and
+    <br>
+    <a href=https://llum01.columbusstate.edu/cp/home/displaylogin>CougarNet Login</a>
+    <br>
+    It should be obvious that the second link is the legitimate login page. In a real attack scenario, the fake webpage would look almost exactly like real one.
+    CHECK THE URL. A fake website will rarely have the correct URL. It will instead have a URL like "columbusstate.college.com" or "columbusstate.co" instead of the "real" URL.
     </p>
        
 </div>
