--- a/app/templates/socialengineering-module.html
+++ b/app/templates/socialengineering-module.html
@@ -4,6 +4,6 @@
 <hr>
 <ul style="margin: 15px 0px 0px 0px;" class="list-group">
     <li class="list-group-item"><a href="{{ url_for('phishing') }}">1. Phishing</a></li>
-    <li class="list-group-item"><a href="{{ url_for('detectPhishing') }}">2. Detecting Phishing</a></li>
+    <li class="list-group-item"><a href="{{ url_for('detectingPhishing') }}">2. Detecting Phishing</a></li>
 </ul>
 {% endblock %}
