--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,14 +17,14 @@
           <p><a class="btn btn-default" href="{{ url_for('passwordModule') }}" role="button">Begin Module&raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Web Security</h2>
-          <p>Protip: Look for the little lock icon and think before you click. [Under Construction]</p>
-          <p><a class="btn btn-default" href="#" role="button">Begin Module&raquo;</a></p>
+          <h2>Social Engineering and You</h2>
+          <p>Click the button below. Come on, you can trust me. This module explores the weakest link in most security systems, YOU. [Under Construction]</p>
+          <p><a class="btn btn-default" href="{{ url_for('socialEngineeringModule') }}" role="button">Begin Module &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Social Engineering and You</h2>
-          <p>Click the button below. Come on, you can trust me. [Under Construction]</p>
-          <p><a class="btn btn-default" href="{{ url_for('socialEngineeringModule') }}" role="button">Begin Module &raquo;</a></p>
+          <h2>Web Security</h2>
+          <p>Protip: Look for the little lock icon and think before you click. [Placeholder]</p>
+          <p><a class="btn btn-default" href="#" role="button">Begin Module&raquo;</a></p>
         </div>
       </div>
     <!-- Row 2 -->
@@ -35,17 +35,17 @@
             <p>“There will come a time when it isn't 'They're spying on me through my phone' anymore. Eventually, it will be 'My phone is spying on me'.”</p>
             <p><small>Phillip K. Dick</small></p>
           </blockquote>
-          <p>[Under Construction]</p>
+          <p>[Placeholder]</p>
           <p><a class="btn btn-default" href="#" role="button">Begin Module&raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Malware</h2>
-          <p>Malware: Ancient Latin for "Now I have to reformat EVERYTHING and learn to stop clicking fake download ads." [Under Construction]</p>
+          <p>Malware: Latin for "Now I have to reformat EVERYTHING and learn to stop clicking fake download ads." [Placeholder]</p>
           <p><a class="btn btn-default" href="#" role="button">Begin Module&raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Rogue Devices</h2>
-          <p>Inserting a random USB drive into your computer is like jumping into dumpsters head-first, sometimes you find a slightly used HD TV and sometimes you find used hypodermic needles.</p>
+          <p>Inserting a random USB drive into your computer is like jumping into dumpsters head-first, sometimes you find a slightly used HD TV and sometimes you find used hypodermic needles. [Placeholder]</p>
           <p><a class="btn btn-default" href="#" role="button">Begin Module&raquo;</a></p>
       </div>
 
