Update CSS for fake login.

--- a/app/templates/displaylogin.html
+++ b/app/templates/displaylogin.html
@@ -127,9 +127,9 @@ else if ( is_nav4_7up) { size = "10"; }
 
 
 
-<link rel="stylesheet" href="https://llum01.columbusstate.edu/misc/style.css" type="text/css">
-<link rel="stylesheet" href="https://llum01.columbusstate.edu/custom/classic/custom.css" type="text/css">
-<link rel="stylesheet" href="https://llum01.columbusstate.edu/cp/content/style.css" type="text/css">
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/CSUstyle1.css') }}" rel="stylesheet">
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/CSUstyle2.css') }}" rel="stylesheet">
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/CSUstyle3.css') }}" rel="stylesheet">
 
 
 
