Set up for linearity.

--- a/app/templates/defaultPasswords.html
+++ b/app/templates/defaultPasswords.html
@@ -23,7 +23,7 @@
 <a href="{{ url_for('passwordCracking') }}"><button class="btn btn-info"style="margin: 0px 0px 0px 0px;">Go back</button></a>
 </div>
 <div style="float:right; margin-top: 50px">
-<a href="{{ url_for('passwordCompletion') }}"><button class="btn btn-info" style="margin: 0px 0px 0px 0px;">Next</button></a>
+<a href="{{ url_for('phishing') }}"><button class="btn btn-info" style="margin: 0px 0px 0px 0px;">Next</button></a>
 </div>
     
 </div>
