--- a/app/templates/detectingphishing.html
+++ b/app/templates/detectingphishing.html
@@ -19,6 +19,12 @@ Phishing emails will often take you to fake websites that are mocked up to look 
     It should be obvious that the second link is the legitimate login page. In a real attack scenario, the fake webpage would look almost exactly like real one.
     CHECK THE URL. A fake website will rarely have the correct URL. It will instead have a URL like "columbusstate.college.com" or "columbusstate.co" instead of the "real" URL.
     </p>
+    <div style="float:left; margin-top: 30px">
+    <a href="{{ url_for('phishing') }}"><button class="btn btn-info"style="margin: 0px 0px 0px 995px;">Go back</button></a>
+    </div>
+    <div style="float:right; margin-top: 30px">
+    <a href="{{ url_for('webSecurity') }}"><button class="btn btn-info">Next</button></a>
+    </div>
        
 </div>
 
