--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,12 +19,12 @@
         <div class="col-md-4">
           <h2>Social Engineering and You</h2>
           <p>Click the button below. Come on, you can trust me. This module explores the weakest link in most security systems, YOU. [Under Construction]</p>
-          <p><a class="btn btn-default" href="{{ url_for('socialEngineeringModule') }}" role="button">Begin Module &raquo;</a></p>
+          <!-- <p><a class="btn btn-default" href="#" role="button">Begin Module &raquo;</a></p> -->
         </div>
         <div class="col-md-4">
           <h2>Web Security</h2>
           <p>Protip: Look for the little lock icon and think before you click. [Placeholder]</p>
-          <p><a class="btn btn-default" href="#" role="button">Begin Module&raquo;</a></p>
+          <!--<p><a class="btn btn-default" href="#" role="button">Begin Module&raquo;</a></p> -->
         </div>
       </div>
     <!-- Row 2 -->
@@ -36,17 +36,23 @@
             <p><small>Phillip K. Dick</small></p>
           </blockquote>
           <p>[Placeholder]</p>
+          <!--
           <p><a class="btn btn-default" href="#" role="button">Begin Module&raquo;</a></p>
+          -->
         </div>
         <div class="col-md-4">
           <h2>Malware</h2>
           <p>Malware: Latin for "Now I have to reformat EVERYTHING and learn to stop clicking fake download ads." [Placeholder]</p>
+          <!--
           <p><a class="btn btn-default" href="#" role="button">Begin Module&raquo;</a></p>
+          -->
         </div>
         <div class="col-md-4">
           <h2>Rogue Devices</h2>
           <p>Inserting a random USB drive into your computer is like jumping into dumpsters head-first, sometimes you find a slightly used HD TV and sometimes you find used hypodermic needles. [Placeholder]</p>
+          <!--
           <p><a class="btn btn-default" href="#" role="button">Begin Module&raquo;</a></p>
+          -->
       </div>
 
 {% endblock %}
