--- a/app/templates/password-completion.html
+++ b/app/templates/password-completion.html
@@ -9,7 +9,7 @@
     <div id="name" style="position: absolute;top: 290px;left: 205px;width: 100%;">
     </div>
     <div id="for" style="position: absolute;top: 390px;left: 205px;width: 100%;">
-      <h2>Completion of Password Module</h2>
+      <h2>Completion of CSAM</h2>
     </div>
     <div id="date" style="position: absolute;top: 500px;left: 205px;width: 100%;">
     </div>
