fixed buttons on mobile

--- a/app/templates/password-completion.html
+++ b/app/templates/password-completion.html
@@ -18,9 +18,17 @@
     </div>  
 </div>
 
+<div style="float:right; margin-top: 20px;">
+<div style="float:right;">
+<a href=" {{ url_for('index') }}"><button class="btn btn-info">Done</button></a>
+</div>
+</div>
+
+<!--
 <div style="margin-top: 30px">
 <a href="{{ url_for('index') }}"><button class="btn btn-info"style="margin: 0px 0px 0px 995px;">Done</button></a>
 </div>
+-->
 
 <script>
   var input = prompt("Please enter your name");
