--- a/app/templates/password_cracking_results.html
+++ b/app/templates/password_cracking_results.html
@@ -12,10 +12,25 @@
        </tr>
     {% endfor %}
 </table>
+
+
+<div style="float:right; margin-top: 20px;">
+<div style="float:left; margin-right: 20px; ">
+<a href="{{ url_for('passwordCracking') }}"><button class="btn btn-info">Go back</button></a>
+</div>
+<div style="float:right;">
+<a href="{{ url_for('defaultPasswords') }}"><button class="btn btn-info">Next</button></a>
+</div>
+</div>
+
+
+<!--
 <div style="float:left; margin-top: 30px">
 <a href="{{ url_for('passwordCracking') }}"><button class="btn btn-info"style="margin: 0px 0px 0px 995px;">Go back</button></a>
 </div>
 <div style="float:right; margin-top: 30px">
 <a href="{{ url_for('defaultPasswords') }}"><button class="btn btn-info">Next</button></a>
 </div>
+-->
+
 {% endblock %}
