--- a/app/templates/web_sec.html
+++ b/app/templates/web_sec.html
@@ -172,15 +172,23 @@ Which is the Most Secure Browser?
 Nominating one browser as the most secure is difficult. Since each browser is regularly updated with security patches, the rankings for most secure browser could change at any time. As of today, Veracode recommends Google Chrome as the most secure browser.
 
 </p>
+<div style="float:right; margin-top: 20px;">
+<div style="float:left; margin-right: 20px; ">
+<a href="{{ url_for('detectingPhishing') }}"><button class="btn btn-info">Go back</button></a>
+</div>
+<div style="float:right;">
+<a href="{{ url_for('passwordCompletion') }}"><button class="btn btn-info">Next</button></a>
+</div>
+</div>
 
-
-
+    <!--
     <div style="float:left; margin-top: 50px; margin-left: 330px;">
         <a href="{{ url_for('detectingPhishing') }}"><button class="btn btn-info"style="margin-left: 650px;">Go back</button></a>
     </div>
     <div style="float:right; margin-top: 50px">
         <a href="{{ url_for('passwordCompletion') }}"><button class="btn btn-info" style="margin: 0px 0px 0px 0px;">Next</button></a>
     </div>
+    -->
     
 </div>
 
