--- a/app/templates/defaultPasswords.html
+++ b/app/templates/defaultPasswords.html
@@ -17,14 +17,24 @@
     </p>
     
     
-    
 
+<div style="float:right; margin-top: 20px;">
+<div style="float:left; margin-right: 20px; ">
+<a href="{{ url_for('passwordCracking') }}"><button class="btn btn-info">Go back</button></a>
+</div>
+<div style="float:right;">
+<a href="{{ url_for('phishing') }}"><button class="btn btn-info">Next</button></a>
+</div>
+</div>
+
+<!--
 <div style="float:left; margin-top: 50px; margin-left: 330px;">
 <a href="{{ url_for('passwordCracking') }}"><button class="btn btn-info"style="margin: 0px 0px 0px 0px;">Go back</button></a>
 </div>
 <div style="float:right; margin-top: 50px">
 <a href="{{ url_for('phishing') }}"><button class="btn btn-info" style="margin: 0px 0px 0px 0px;">Next</button></a>
 </div>
+-->
     
 </div>
 
