fixed some more button ststuff, and added both password results to one screen

--- a/app/templates/password-completion.html
+++ b/app/templates/password-completion.html
@@ -3,8 +3,8 @@
 
 {% extends "layout.html" %}
 {% block content %}
-
-<div class="container" style="position: relative;">
+<div class="container">
+<div style="position: relative;">
     <img src="../static/images/certificate.jpg" height="720" width="960">
     <div id="name" style="position: absolute;top: 290px;left: 205px;width: 100%;">
     </div>
@@ -16,14 +16,15 @@
     <div id="signed" style="position: absolute;top: 500px;left: 620px;width: 100%;">
       <h2>CSAM</h2>
     </div>  
-</div>
 
-<div style="float:right; margin-top: 20px;">
+
+<div style="float:right;">
 <div style="float:right;">
 <a href=" {{ url_for('index') }}"><button class="btn btn-info">Done</button></a>
 </div>
 </div>
-
+</div>
+</div>
 <!--
 <div style="margin-top: 30px">
 <a href="{{ url_for('index') }}"><button class="btn btn-info"style="margin: 0px 0px 0px 995px;">Done</button></a>
