--- a/app/templates/password_cracking_results.html
+++ b/app/templates/password_cracking_results.html
@@ -1,17 +1,29 @@
 
 {% extends "layout.html" %}
 {% block content %}
-    
+<div class="container"> 
 <h3 style="margin: 15px 0px 0px 0px;">Results</h3>
 <hr>
+<h4>Dictionary:</h4>
 <table style="margin: 15px 0px 0px 0px;" class="table table-striped table-bordered table-condensed">
-    {% for key, value in results.iteritems() %}
-       <tr>
-            <th> {{ key }} </th>
-            <td> {{ value }} </td>
-       </tr>
-    {% endfor %}
+		{% for key, value in results[0].items() %}
+		   <tr>
+		        <th> {{ key }} </th>
+		        <td> {{ value }} </td>
+		   </tr>
+		{% endfor %}
 </table>
+<h4>Brute Force:</h4>
+<table style="margin: 15px 0px 0px 0px;" class="table table-striped table-bordered table-condensed">
+		{% for key, value in results[1].items() %}
+		   <tr>
+		        <th> {{ key }} </th>
+		        <td> {{ value }} </td>
+		   </tr>
+		{% endfor %}
+</table>
+
+
 
 
 <div style="float:right; margin-top: 20px;">
@@ -22,7 +34,7 @@
 <a href="{{ url_for('defaultPasswords') }}"><button class="btn btn-info">Next</button></a>
 </div>
 </div>
-
+</div>
 
 <!--
 <div style="float:left; margin-top: 30px">
