changed names to reflect module

--- a/app/templates/password-strength.html
+++ b/app/templates/password-strength.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div style="margin: 15px 0px 0px 0px;" class="container">
-    <h3 style="margin: 0px 0px 30px 0px;">Password Complexity Checker</h3>
+    <h3 style="margin: 0px 0px 30px 0px;">Password Strength & Cracking</h3>
     <hr>
     <p style="margin: 15px 0px 0px 0px;">
         The best way that users can protect their passwords from cracking is to ensure they choose strong passwords. Typically, passwords must contain a combination of mixed-case random letters, digits and symbols. Strong passwords should never be actual words. In addition, strong passwords are at least eight characters long. 
