--- a/app/templates/web_sec.html
+++ b/app/templates/web_sec.html
@@ -3,7 +3,7 @@
 
 <div class="container" style="margin: 15px 0px 0px 0px;">
     
-    <h3>Securing Your Browser</h3>
+    <h3>Web Security</h3>
     <hr>
 
 <p style="margin-bottom: 20px; margin-top: 20px">
