--- a/app/templates/defaultPasswords.html
+++ b/app/templates/defaultPasswords.html
@@ -13,8 +13,12 @@
     <p style="margin: 15px 0px 0px 0px;"> 
         Many devices use default passwords. Manufacturers provide these default credentials to make the initial setup of a device simpler. Default credentials are also used whenever a device is reset back to factory settings.
         <br/>
-        Default passwords are usually simple, and not unique to each individual device. These default credentials can be found in the instruction manuals, or on the device itself. The expecation is that each user will change their password to something that is unique; however, many do not. This presents an enormous security concern. There are websites such as <a href="http://zeecure.com/free-cctv-and-security-tools/complete-list-of-every-ip-camera-default-username-password-and-ip-address/">this one</a> that have the default credentials for many devices.
-    </p>
+        Default passwords are usually simple, and not unique to each individual device. These default credentials can be found in the instruction manuals, or on the device itself. The expecation is that each user will change their password to something that is unique; however, many do not. This presents an enormous security concern. 
+        </p>
+        <div style="margin-top:20px">
+        <h4>There are websites such as:
+        <a style="color:red" href="http://zeecure.com/free-cctv-and-security-tools/complete-list-of-every-ip-camera-default-username-password-and-ip-address/">this one</a> that have the default credentials for many devices.</h4>
+        </div>
     
     
 
