--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,56 +3,33 @@
     <div class="jumbotron" >
       <div class="container">
         <h1>Cyber Security Awareness Module</h1>
-        <p>Please pick a module below to begin.</p>
+        <h2>Start learning about password security, social engineering, and web security by clicking the button below.</h2>
+      <p><a class="btn btn-default" href="{{ url_for('passwordStrength') }}" role="button">Begin Module&raquo;</a></p>
       </div>
     </div>
 
-<!-- Module Table -->
+<!-- Sub-Module Table -->
     <div class="container">
+    <h2>Sub-module Information</h2>
     <!-- Row 1 -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Password Strength & Cracking</h2>
-          <p>Crack passwords like a real-life attacker and learn more about password strength and the dangers of default passwords. [Under Construction]</p>
-          <p><a class="btn btn-default" href="{{ url_for('passwordStrength') }}" role="button">Begin Module&raquo;</a></p>
+          <h3>Password Strength & Cracking</h3>
+          <p>Crack passwords like a real-life attacker</p>
+          <p>Learn more about password strength and what it means to be strong.
+          <p>Discover the dangers of default passwords which may allow an attacker to spy on you in your own home.</p>
         </div>
         <div class="col-md-4">
-          <h2>Social Engineering and You</h2>
-          <p>Click the button below. Come on, you can trust me. This module explores the weakest link in most security systems, YOU. [Under Construction]</p>
-          <!-- <p><a class="btn btn-default" href="#" role="button">Begin Module &raquo;</a></p> -->
+          <h3>Social Engineering and You</h3>
+          <p>Click the button below. Come on, you can trust me. This module explores the weakest link in most security systems, YOU.</p>
+          <p>Learn how scam artists manipulate people into handing over valuable information and/or compromise their computers.
         </div>
         <div class="col-md-4">
-          <h2>Web Security</h2>
-          <p>Protip: Look for the little lock icon and think before you click. [Placeholder]</p>
-          <!--<p><a class="btn btn-default" href="#" role="button">Begin Module&raquo;</a></p> -->
+          <h3>Web Security</h3>
+          <p>Protip: Look for the little lock icon and think before you click.</p>
+          <p>This sub-module shows how browsers can be tightened up to make for a more secure online experience.</p>
         </div>
       </div>
-    <!-- Row 2 -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Smartphone Security</h2>
-          <blockquote>
-            <p>“There will come a time when it isn't 'They're spying on me through my phone' anymore. Eventually, it will be 'My phone is spying on me'.”</p>
-            <p><small>Phillip K. Dick</small></p>
-          </blockquote>
-          <p>[Placeholder]</p>
-          <!--
-          <p><a class="btn btn-default" href="#" role="button">Begin Module&raquo;</a></p>
-          -->
-        </div>
-        <div class="col-md-4">
-          <h2>Malware</h2>
-          <p>Malware: Latin for "Now I have to reformat EVERYTHING and learn to stop clicking fake download ads." [Placeholder]</p>
-          <!--
-          <p><a class="btn btn-default" href="#" role="button">Begin Module&raquo;</a></p>
-          -->
-        </div>
-        <div class="col-md-4">
-          <h2>Rogue Devices</h2>
-          <p>Inserting a random USB drive into your computer is like jumping into dumpsters head-first, sometimes you find a slightly used HD TV and sometimes you find used hypodermic needles. [Placeholder]</p>
-          <!--
-          <p><a class="btn btn-default" href="#" role="button">Begin Module&raquo;</a></p>
-          -->
       </div>
 
 {% endblock %}
