Change 'Modules' to 'Module' in layout.html.

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -45,7 +45,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{{ url_for('index') }}"><b>Modules</b></a></li>
+            <li class="active"><a href="{{ url_for('index') }}"><b>Module</b></a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
             <li><a href="{{ url_for('contact') }}">Contact</a></li>
           </ul>
