--- a/app/templates/password-strength.html
+++ b/app/templates/password-strength.html
@@ -8,7 +8,7 @@
         The best way that users can protect their passwords from cracking is to ensure they choose strong passwords. Typically, passwords must contain a combination of mixed-case random letters, digits and symbols. Strong passwords should never be actual words. In addition, strong passwords are at least eight characters long. 
     </p>
     <p style="margin: 15px 0px 15px 0px;">
-        A general formula for calculating the complexity of a password is # of possible unique characters ^ how many characters in the password. For example if your password consist of only eight lowercase letters you have 26 ^ 8 or 208827064576 possibilities. Including numbers as well as lowercase letters in your eight character password increases its complexity to 36 ^ 8 or 2821109907456 possibilities. 
+        A general formula for calculating the complexity of a password is # of possible unique characters ^ how many characters in the password. For example if your password consist of only eight lowercase letters you have 26 ^ 8 or 208,827,064,576 possibilities. Including numbers as well as lowercase letters in your eight character password increases its complexity to 36 ^ 8 or 2,821,109,907,456 possibilities. 
     </p>
     <h5>Try passwords and see if they meet recommended requirements for complexity.</h5>
     <form action="." method="POST" class="col-md-4" style="margin: 15px 0px 0px 0px;">
