Update to add 'progression meter' at top of sub-module pages.

--- a/app/templates/password-cracking.html
+++ b/app/templates/password-cracking.html
@@ -3,7 +3,7 @@
 
 <div class="container" style="margin: 0px 0px 0px 0px;">
 
-    <h3>Password Strength and Cracking</h3>
+    <h3>Password Strength and Cracking [2/6]</h3>
     <hr>
     <p style="margin: 15px 0px 0px 0px;">
         Password cracking is the process of discovering computer passwords. There are two approaches to cracking passwords:
