--- a/app/templates/defaultPasswords.html
+++ b/app/templates/defaultPasswords.html
@@ -7,7 +7,7 @@
         <iframe src='http://abcnews.go.com/video/embed?id=27068822' width='640' height='360' scrolling='no' style='border:none;'></iframe> 
     </div>
     
-    <h3>Password Strength & Cracking</h3>
+    <h3>Password Strength & Cracking [3/6]</h3>
     <hr>
     
     <p style="margin: 15px 0px 0px 0px;"> 
