--- a/app/templates/detectingPhishing.html
+++ b/app/templates/detectingPhishing.html
@@ -3,7 +3,7 @@
 
 <div class="container" style="margin: 15px 0px 0px 0px;">
 
-    <h3>Social Engineering and You</h3>
+    <h3>Social Engineering: Fake Websites [5/6]</h3>
     <hr>
 
     <p>
