Increase module start button size.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
       <div class="container">
         <h1>Cyber Security Awareness Module</h1>
         <h2>Start learning about password security, social engineering, and web security by clicking the button below.</h2>
-      <p><a class="btn btn-default" href="{{ url_for('passwordStrength') }}" role="button">Begin Module&raquo;</a></p>
+      <p><a class="btn btn-default btn-lg" href="{{ url_for('passwordStrength') }}" role="button">Begin Module&raquo;</a></p>
       </div>
     </div>
 
