Finish all last minute updates (except web_sec.html changes) before release.

--- a/app/templates/defaultPasswords.html
+++ b/app/templates/defaultPasswords.html
@@ -17,7 +17,7 @@
         </p>
         <div style="margin-top:20px">
         <h4>There are websites such as:
-        <a style="color:red" href="http://zeecure.com/free-cctv-and-security-tools/complete-list-of-every-ip-camera-default-username-password-and-ip-address/">this one</a> that have the default credentials for many devices.</h4>
+        <a style="color:red" href="https://datarecovery.com/rd/default-passwords/" target="_blank">this one</a> that have the default credentials for many devices.</h4>
         </div>
     
     
