--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -64,7 +64,7 @@
 
     <hr>
       <footer>
-        <p>Source code hosted at <a href="https://github.com/ClamSec/CSAM">here</a>.</p>
+        <p>Source code hosted at <a href="https://github.com/ClamSec/CSAM" target="_blank">here</a>.</p>
       </footer>
     </div><!-- /.container -->
 
