--- a/app/templates/web_sec.html
+++ b/app/templates/web_sec.html
@@ -40,18 +40,20 @@ Chrome browser:
 
 <p style="margin-bottom: 20px; margin-top: 20px">
 
-1.      Type chrome://settings in the url box  OR  click the Chrome menu   on the browser toolbar and select  Settings
-2.      Click on “Show advanced settings” at the bottom of the page.
-3.      Scroll down to see “Privacy” and click on “Content settings…” box.
-4.      This screen allows you to set the settings as you prefer.
-
-</p>
-<p style="margin-bottom: 20px; margin-top: 20px">
-
 <b>
 Before you make changes in your settings visit Chrome’s support page on content settings:
 </b> https://support.google.com/chrome/answer/114662
  </p>
+
+
+<p style="margin-bottom: 20px; margin-top: 20px">
+<ul>
+<li>1.      Type chrome://settings in the url box  OR  click the Chrome menu   on the browser toolbar and select  Settings</li>
+<li>2.      Click on “Show advanced settings” at the bottom of the page.</li>
+<li>3.      Scroll down to see “Privacy” and click on “Content settings…” box.</li>
+<li>4.      This screen allows you to set the settings as you prefer.</li>
+</ul>
+</p>
 
  <p style="margin-bottom: 20px; margin-top: 20px">
 For more information on how to secure your browser visit
