--- a/app/templates/password_cracking_results.html
+++ b/app/templates/password_cracking_results.html
@@ -4,8 +4,7 @@
 <div class="container"> 
 <h3 style="margin: 15px 0px 0px 0px;">Results</h3>
 <hr>
-<h4>To crack more passwords, hit the "Go Back" button in the bottom right part of the page.</h4>
-<h4 style="margin-top: 30px;">Dictionary:</h4>
+<h4 style="margin-top: 30px;">Dictionary Attack:</h4>
 <table style="margin-top: 15px; margin-bottom: 30px;" class="table table-striped table-bordered table-condensed">
 		{% for key, value in results[0].items() %}
 		   <tr>
@@ -14,7 +13,7 @@
 		   </tr>
 		{% endfor %}
 </table>
-<h4>Brute Force:</h4>
+<h4>Brute Force Attack:</h4>
 <table style="margin: 15px 0px 0px 0px;" class="table table-striped table-bordered table-condensed">
 		{% for key, value in results[1].items() %}
 		   <tr>
@@ -26,6 +25,7 @@
 
 
 
+<h4>To crack more passwords, hit the "Go Back" button in the bottom right part of the page.</h4>
 
 <div style="float:right; margin-top: 20px;">
 <div style="float:left; margin-right: 20px; ">
