--- a/app/templates/password_strength_results.html
+++ b/app/templates/password_strength_results.html
@@ -2,7 +2,8 @@
 {% block content %}
 <h3 style="margin: 15px 0px 0px 0px;">Results</h3>
 <hr>
-<h3>To test the strength of more passwords, hit the "Go Back" button in the bottom right part of the page.</h3>
+
+<h3>Characteristics of Your Passwords</h3>
 <table style="margin: 30px 0px 0px 0px;" class="table table-striped table-bordered table-condensed">
     {% for key, value in results.iteritems() %}
        <tr>
@@ -11,8 +12,8 @@
        </tr>
     {% endfor %}
 </table>
-<h3 style="margin: 30px 0px 0px 0px;">Time Needed to Brute Force Your Password</h3>
-<hr>
+
+<h3 style="margin: 30px 0px 0px 0px;">Strength of Your Password</h3>
 <table style="margin: 30px 0px 0px 0px;" class="table table-striped table-bordered table-condensed">
     {% for key, value in time.iteritems() %}
        <tr>
@@ -21,6 +22,8 @@
        </tr>
     {% endfor %}
 </table>
+
+<h3>To test the strength of more passwords, hit the "Go Back" button in the bottom right part of the page.</h3>
 
 <div style="float:right; margin-top: 20px;">
 <div style="float:left; margin-right: 20px; ">
