updated web sec page

--- a/app/templates/web_sec.html
+++ b/app/templates/web_sec.html
@@ -38,28 +38,19 @@ Chrome browser:
 
 </h3>
 
-<p style="margin-bottom: 20px; margin-top: 20px">
 
-<b>
-Before you make changes in your settings visit Chrome’s support page on content settings:
-</b> https://support.google.com/chrome/answer/114662
- </p>
 
 
 <p style="margin-bottom: 20px; margin-top: 20px">
-<ul>
-<li>1.      Type chrome://settings in the url box  OR  click the Chrome menu   on the browser toolbar and select  Settings</li>
-<li>2.      Click on “Show advanced settings” at the bottom of the page.</li>
-<li>3.      Scroll down to see “Privacy” and click on “Content settings…” box.</li>
-<li>4.      This screen allows you to set the settings as you prefer.</li>
-</ul>
+<ol>
+<li>Type chrome://settings in the url box  OR  click the Chrome menu   on the browser toolbar and select  Settings</li>
+<li>Click on “Show advanced settings” at the bottom of the page.</li>
+<li>Scroll down to see “Privacy” and click on “Content settings…” box.</li>
+<li>This screen allows you to set the settings as you prefer.</li>
+</ol>
 </p>
 
- <p style="margin-bottom: 20px; margin-top: 20px">
-For more information on how to secure your browser visit
-https://www.us-cert.gov/publications/securing-your-web-browser#how_to_secure
-
-</p>
+<p style="margin-bottom: 20px; margin-top: 20px">Before you make changes in your settings visit <a href="https://support.google.com/chrome/answer/114662">Chrome’s support page on content settings</a></p>
 
 <h3 style="margin-bottom: 20px; margin-top: 20px">
 
@@ -67,113 +58,55 @@ Firefox Browser:
 
 </h3>
 
- <img src="../static/images/image03.png" style="height:281px; width:400px; float:left;margin-right:25px; margin-bottom: 20px;">
+ <img src="../static/images/image03.png" style="height:281px; width:400px; margin-bottom: 20px;">
 
 <p style="margin-bottom: 20px; margin-top: 20px">
-These settings can be accessed through the “Options” menu.
-<ul>
-<li>Configure privacy settings: Under the “Privacy” tab, complete the following steps. These measures ensure that Firefox is storing only as much of your information as it needs to function normally. 
-</li>
-    <ul>
-    <li>Select “Use custom settings for history.”</li>
-    <li>Deselect “Remember my browsing and download history.”</li>
-    <li>Deselect “Remember search and form history.”</li>
-    <li>Deselect “Accept third-party cookies.”</li>
-    <li>Set cookie storage to “Keep until I close Firefox.”</li>
-    <li>Select “Clear history when Firefox closes.”</li>
-    </ul>
-<li>
-Configure security settings: Under the “Security” tab, choose the following settings. These steps prevent Firefox from saving your passwords and keep you from visiting potentially harmful sites.
-</li>
-<li>
-Verify that “Warn me when sites try to install add-ons,” “Block reported attack sites,” and “Block reported web forgeries” are all selected.
-Deselect “Remember passwords for sites.”
-</li>
-<li>
-Disable javaScript: Deselect “Enable JavaScript” under the “Content” tab. JavaScript is notorious for containing security vulnerabilities and it is recommended that users only enable it for trusted sites.
-</li>
-<li>
-Enable pop-up blocking: Verify that “Block pop-up windows” is selected under the “Content” tab. This feature should be turned on by default as it protects users from unwarranted advertisements and windows.
-</li>
-<li>
-Don’t sync: Avoid using Firefox Sync. By doing so you prevent Firefox from storing your logins, passwords, and other sensitive information.
-</li>
-<li>
-Turn on automatic updates: Verify that “Automatically install updates” is selected in the “Update” tab under “Advanced.” Doing so will ensure that your browser receives critical security updates. Verify that “Automatically update Search Engines” is selected as well.
-</li>
-<li>
-Use secure protocols: Verify that “Use SSL 3.0” and “Use TLS 1.0” are selected in the “Encryption” tab under “Advanced.”
-</li>
-</ul>
+Before you make changes in your settings visit <a href= "https://support.mozilla.org/en-US/products/firefox/protect-your-privacy">Firefox’s support page on content settings.</a>
 </p>
+<h3>To change your FireFox security settings:</h3>
+<div>
+<ol>
+    <li>Open Internet Explorer by clicking the Start button, and then clicking Internet Explorer.</li>
+    <li>Click the Tools button, and then click Internet Options.
+</li>
+    <li>Click the Security tab.
+</li>
+    <li>Click the Internet icon.</li>
+    <li>Select configurations that are secure and recommended.
+</li>
+</ol>
+</div>
+
 
 <h3 style="margin-bottom: 20px; margin-top: 20px">
 Microsoft Internet Explorer 10: 
 </h3>
-
-<p style="margin-bottom: 20px; margin-top: 20px">
-These settings can be accessed through the “Internet Options” menu.
-
-<ul>
-
-<li>
-Configure security settings: Under the “Security” tab, do the following:
-</li>
-    <ul>
-    <li>
-    Set security zones: IE offers the option to configure different security settings for different “zones,” including the Internet, local intranet, trusted sites, and restricted sites. Set up the zones for Intranet, Trusted Sites, and Restricted sites to your desired security level.
-    </li>
-    <li>
-    Set Internet zone security to “Medium High” or higher. This blocks certain cookie types, enables ActiveX filtering, and implements several other default settings for increased security.
-    </li>
-    <li>
-    Disable javaScript: Click “Custom Level,” locate the “Active Scripting” setting, and select “Disable.” It is recommended that users disable JavaScript because of the high amount of vulnerabilities it contains.
-    </li>
-    </ul>
-<li>
-Automatically clear history: Select “Delete browsing history on exit” under the “General” tab. Clearing your history at the end of each session helps to limit the amount of information IE saves when you browse.
-</li>
-<li>
-Configure privacy settings: Under the “Privacy” tab, complete the following steps:
-</li>
-<li>
-Privacy setting: Set the Internet zone privacy to “Medium High” or higher. This blocks certain cookie types to prevent sites from tracking or contacting you without your consent.
-
-</li>
-<li>
-Location: Select “Never allow websites to request your physical location.”
-</li>
-<li>
-Pop-up Blocker: Double check that Pop-up Blocker is enabled.
-</li>
-<li>
-Configure Advanced Security settings: Scroll down to the “Security” section under the “Advanced” tab and do the following:
-</li>
-<li>
-Ensure that all default settings are in place. If you aren’t sure, click “Restore advanced settings” before making any other changes.
-</li>
-<li>
-Select “Do not save encrypted pages to disk.” This will delete files cached from HTTPS pages when the browser is closed.
-</li>
-<li>
-Select “Empty Temporary Internet Files folder when browser is closed.” This prevents IE from storing your personal info (logins, passwords, activity, etc) beyond your browsing session.
-</li>
-<li>
-Turn off autoComplete: The AutoComplete feature should be turned off for forms and usernames/passwords. Keeping AutoComplete turned off ensures that your sensitive information isn’t being stored unnecessarily.
-</li>
-<li>
-Tracking protection: IE’s Tracking Protection feature keeps your browsing private from specified third-party websites. This feature can be accessed through IE’s “Safety” menu. In order to use Tracking Protection you will need to provide a Tracking Protection List that names all of the sites you don’t want your information being sent to. You can create a list yourself or download lists online.
-</li>
-</ul>
-
-
-<h3 style="margin-bottom: 20px; margin-top: 20px">
-Which is the Most Secure Browser?
-</h3>
-
-Nominating one browser as the most secure is difficult. Since each browser is regularly updated with security patches, the rankings for most secure browser could change at any time. As of today, Veracode recommends Google Chrome as the most secure browser.
-
+<p>
+Read about<a href= "http://windows.microsoft.com/en-us/windows-vista/security-and-privacy-features-in-internet-explorer-8"> privacy and security features of Internet Explorer here.</a>
 </p>
+<div>
+<p>To change your Internet Explorer security settings:</p>
+<ol>
+    <li>Open Internet Explorer by clicking the Start button , and then clicking Internet Explorer.</li>
+    <li>Click the Tools button, and then click Internet Options.
+</li>
+    <li>Click the Security tab.</li>
+    <li>Click the Internet icon.
+</li>
+    <li>Select configurations that are secure and recommended.
+</li>
+</ol>
+</div>
+<div>
+<img src="../static/images/image04.png" style="height:260; width:238;">
+</div>
+<p>
+For more information on how to secure your browser visit <a href="https://www.us-cert.gov/publications/securing-your-web-browser#how_to_secure">https://www.us-cert.gov/publications/securing-your-web-browser#how_to_secure</a>
+</p>
+
+ 
+
+
 <div style="float:right; margin-top: 20px;">
 <div style="float:left; margin-right: 20px; ">
 <a href="{{ url_for('detectingPhishing') }}"><button class="btn btn-info">Go back</button></a>
