--- a/app/templates/password_strength_results.html
+++ b/app/templates/password_strength_results.html
@@ -1,7 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
+
+<div class="container">
+
 <h3 style="margin: 15px 0px 0px 0px;">Results</h3>
 <hr>
+
 
 <h3>Characteristics of Your Passwords</h3>
 <table style="margin: 30px 0px 0px 0px;" class="table table-striped table-bordered table-condensed">
@@ -26,15 +30,14 @@
 <h3>To test the strength of more passwords, hit the "Go Back" button in the bottom right part of the page.</h3>
 
 <div style="float:right; margin-top: 20px;">
-<div style="float:left; margin-right: 20px; ">
-<a href="{{ url_for('passwordStrength') }}"><button class="btn btn-info">Go back</button></a>
-</div>
-<div style="float:right;">
-<a href="{{ url_for('passwordCracking') }}"><button class="btn btn-info">Next</button></a>
+  <div style="float:left; margin-right: 20px; ">
+    <a href="{{ url_for('passwordStrength') }}"><button class="btn btn-info">Go back</button></a>
+  </div>
+  <div style="float:right;">
+    <a href="{{ url_for('passwordCracking') }}"><button class="btn btn-info">Next</button></a>
+  </div>
 </div>
 </div>
 
-
-</br>
 <!-- <p>Estimations for rates are from <a href="http://hashcat.net/oclhashcat/#performance">here.</a></p> -->
 {% endblock %}
